# Warhammer-Inventory-Tracker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: dev-image-branch.yml  docker-ci.yml
app/: bsdata.py  db.py  main.py  storage.py
app/static/: app.js  index.html  styles.css
docs/architecture/: web-mobile-sync-scope.md
docs/development/: local-container-stack.md
infra/keycloak/: wh40k-realm.json
infra/keycloak/themes/night-lords/login/: theme.properties
infra/keycloak/themes/night-lords/login/resources/css/: night-lords.css
infra/lightsail/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/lightsail/templates/: cloud-init.sh.tftpl
scripts/: export_openapi.py
tests/: conftest.py  test_bsdata_parser.py  test_db.py  test_main_api.py  test_wargear_summary.py
