[project]
name = "wh40k-stock-tracker"
version = "0.2.0"
description = "A small FastAPI and SQLite stock tracker for Warhammer 40,000 and Kill Team models using BSData catalogues."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
