[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wh40k-stock-tracker"
version = "0.2.0"
description = "A small FastAPI and SQLite stock tracker for Warhammer 40,000 and Kill Team models using BSData catalogues."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "starlette>=0.46,<1.0",
  "anyio>=3.6.2,<4.13",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["static/*"]

[dependency-groups]
test = [
  "pytest>=8,<10",
  "coverage>=7,<8",
  "pytest-cov>=5,<8",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
